k8s/10-functions.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: pricing-fn }
spec:
  replicas: 2
  selector: { matchLabels: { app: pricing-fn } }
  template:
    metadata: { labels: { app: pricing-fn } }
    spec:
      containers:
        - name: pricing-fn
          image: lab4/pricing-fn:v1
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 3001 }]
          readinessProbe:
            httpGet: { path: /health, port: 3001 }
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata: { name: pricing-svc }
spec:
  selector: { app: pricing-fn }
  ports: [{ name: http, port: 80, targetPort: 3001 }]
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: inventory-fn }
spec:
  replicas: 2
  selector: { matchLabels: { app: inventory-fn } }
  template:
    metadata: { labels: { app: inventory-fn } }
    spec:
      containers:
        - name: inventory-fn
          image: lab4/inventory-fn:v1
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 3002 }]
          readinessProbe:
            httpGet: { path: /health, port: 3002 }
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata: { name: inventory-svc }
spec:
  selector: { app: inventory-fn }
  ports: [{ name: http, port: 80, targetPort: 3002 }]
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: checkout-fn }
spec:
  replicas: 2
  selector: { matchLabels: { app: checkout-fn } }
  template:
    metadata: { labels: { app: checkout-fn } }
    spec:
      containers:
        - name: checkout-fn
          image: lab4/checkout-fn:v1
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 3003 }]
          readinessProbe:
            httpGet: { path: /health, port: 3003 }
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata: { name: checkout-svc }
spec:
  selector: { app: checkout-fn }
  ports: [{ name: http, port: 80, targetPort: 3003 }]
